--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ a:hover,a:active {opacity:1.0; color:black}
 
 header{opacity:0.4; text-transform:uppercase; letter-spacing:0}
 nav a:link,nav a:visited{text-decoration:none; font-size:0.625em; padding:10px 10px 10px 0}
-article,footer{padding:0.25em 0 0 0; margin:0.25em 0 5em 0; border-top:1px solid #b2a787;}
+article,footer{padding:0.25em 0 0 0; margin:0.25em 0 5em 0; border-top:1px solid #b2a787}
 footer{opacity:0.4; font-size:0.625em; text-transform:uppercase; text-align:right}
 
 h2 {opacity:0.4; text-transform:uppercase; font-size:0.875em; letter-spacing:0.085em}
