Created xen intro

--- a/index.html
+++ b/index.html
@@ -34,6 +34,15 @@ p {opacity:0.8; font-size:0.875em}
         <a href="https://twitter.com/skl_">twitter</a>
     </nav></header>
 
+    <!-- 2013-01- -->
+    <article id="building-a-xen-hypervisor">
+    <h2><a href="#building-a-xen-hypervisor">§</a> Building a Xen Hypervisor</h2>
+
+    <p>Several months ago I built an Intel Core i5 with a SATA III SSD, the intention was to turn it into a gaming machine. Now I find that I've not much time for gaming so I've decided to re-purpose the machine and take advantage of the hardware. One of my ongoing projects is to migrate my webservers and host from home to save on monthly cost and I thought this would be the perfect opportunity to explore the world of the hypervisor.<p>
+
+    <p>Wikipedia states that <q>a hypervisor or virtual machine manager (VMM) is a piece of software, firmware or hardware that creates and runs virtual machines</q>.</p>
+    </article>
+
     <!-- 2013-01-16 22:37 -->
     <article id="a-website-in-a-single-http-request">
     <h2><a href="#a-website-in-a-single-http-request">§</a> A Website in a Single HTTP Request</h2>
