--- a/index.html
+++ b/index.html
@@ -44,15 +44,15 @@ virtual machines</q>.</p>
 
 <p>I started off by reading about what operating systems were best suited to
 what I would've called the Xen host. I now know the correct terminology to
-be "Domain 0" or <code>dom0</code> as hypervisor terminology dictates that each
+be "Domain 0" or <code>dom0</code> &mdash; as hypervisor terminology dictates that each
 machine is a domain, including the host. It seems you can run Xen on a variety
 of Linux distributions but I noticed quite a bit of documentation and articles
 focusing on Debian. For this reason I picked Debian Squeeze.</p>
 
-<p>The primary drive on my target system is 120 GiB, this doesn't leave much
+<p>The primary hard drive on my target system is 120 GiB, this doesn't leave much
 room for the VMs. Luckily the <a href="http://wiki.xen.org/wiki/Xen_Beginners_Guide">Xen wiki</a>
 recommends <abbr title="Logical Volume Manager">LVM</abbr> which is trivial to setup using
-the Debian installer during OS installation. With the LVM partition in place on the drive I can
+the Debian OS installer during dom0 creation. With the LVM partition in place on the drive I can
 easily grow and shrink partitions as requirements for each virtual machine
 changes over time. This allows me to make the most of what little space I have
 available on the drive.</p>
@@ -84,7 +84,7 @@ apt-get install vlan
 <p>Setup the /etc/network/interfaces with as many of the above VLANs as you
 require for the dom0 and domUs, here's mine (shortened for display):</p>
 
-<code></pre>
+<code><pre>
 # The local loopback interface
 auto lo
 iface lo inet loopback
@@ -150,6 +150,9 @@ xm destroy $1
 xm delete $1
 xen-delete-image --lvm vg0 $1       # You may wish to change the LVM group here
 </pre></code>
+
+<p>Incidently, LVM has an excellent snapshot feature which I've wrapped up into
+<a href="https://gist.github.com/skl/4679224">this gist</a>.</p>
 
 </article>
 
