--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <style type="text/css">
 header,footer,nav,section,article,aside{display:block} html{font-size:100%;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%} body{margin:0;font-size:1em;line-height:1.4em} ::-moz-selection{background:#333;color:#fff;text-shadow:none} ::selection{background:#333;color:#fff;text-shadow:none}a:focus{outline:thin dotted} a:hover,a:active {outline:0}
 
-body{width:80%; max-width:500px; margin:0 auto; padding:5px 0; background:#dfd2a9; font-family:'Helvetica Neue',Helvetica,Arial,sans-serif}
+body{width:80%; max-width:500px; margin:0 auto; padding:5px 0; background:#dfd2a9; font-family:'Helvetica Neue','Roboto Regular','Droid Sans',Helvetica,Arial,sans-serif}
 a:link,a:visited {opacity:0.8; color:black}
 a:hover,a:active {opacity:1.0; color:black}
 
@@ -44,8 +44,8 @@ virtual machines</q>.</p>
 
 <p>I started off by reading about what operating systems were best suited to
 what I would've called the Xen host. I now know the correct terminology to
-be "Domain 0" or <code>dom0</code> &mdash; as hypervisor terminology dictates that each
-machine is a domain, including the host. It seems you can run Xen on a variety
+be "Domain 0" or <code>dom0</code> &ndash; as hypervisor terminology dictates that each
+machine is a domain (including the host). It seems you can run Xen on a variety
 of Linux distributions but I noticed quite a bit of documentation and articles
 focusing on Debian. For this reason I picked Debian Squeeze.</p>
 
