Coding display improvements

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@ footer{opacity:0.4; font-size:0.625em; text-transform:uppercase; text-align:righ
 h2 {opacity:0.4; text-transform:uppercase; font-size:0.875em; letter-spacing:0.085em}
 h2 a {text-decoration:none}
 p {opacity:0.8; font-size:0.875em}
+
+pre {opacity:0.9; width:100%; overflow:auto}
+kbd, code {font-size:1em; font-family:, 'Andale Mono', 'Droid Sans Mono', 'Courier New', monospace;}
 </style>
 </head>
 
