Improve typographic layout

--- a/index.html
+++ b/index.html
@@ -7,23 +7,34 @@
 <meta name="viewport" content="width-device-width, initial-scale=1">
 
 <style type="text/css">
-header,footer,nav,section,article,aside{display:block} html{font-size:100%;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%} body{margin:0;font-size:1em;line-height:1.4em} ::-moz-selection{background:#333;color:#fff;text-shadow:none} ::selection{background:#333;color:#fff;text-shadow:none}a:focus{outline:thin dotted} a:hover,a:active {outline:0}
+header,footer,nav,section,article,aside{display:block}
+html{font-size:100%;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%}
+body{margin:0;font-size:1em;line-height:1.6em}
+::-moz-selection{background:#333;color:#fff;text-shadow:none}
+::selection{background:#333;color:#fff;text-shadow:none}
+a:focus{outline:thin dotted}
+a:hover,a:active {outline:0}
 
-body{width:80%; max-width:500px; margin:0 auto; padding:5px 0; background:#dfd2a9; font-family:'Helvetica Neue','Roboto Regular','Droid Sans',Helvetica,Arial,sans-serif}
+body{width:80%; max-width:500px; margin:2em auto 0 auto; padding:5px 0; background:#d6d3bd;
+    font-family:'Helvetica Neue','Roboto Regular','Droid Sans',Helvetica,Arial,sans-serif;
+    border-top:1px solid #b2a787}
 a:link,a:visited {opacity:0.8; color:black}
 a:hover,a:active {opacity:1.0; color:black}
 
-header{opacity:0.4; text-transform:uppercase; letter-spacing:0}
-nav a:link,nav a:visited{text-decoration:none; font-size:0.625em; padding:10px 10px 10px 0}
-article,footer{padding:0.25em 0 0 0; margin:0.25em 0 10em 0; border-top:1px solid #b2a787}
-footer{opacity:0.4; font-size:0.625em; text-transform:uppercase; text-align:right}
+header{opacity:0.4; text-transform:uppercase; letter-spacing:0.1em; padding:0 0 0 1em;}
+nav a:link,nav a:visited{text-decoration:none; font-size:0.8em; padding:10px 10px 10px 0}
+article,footer{padding:0.25em 0 0 0; margin:0.25em 0 8em 0; border-top:1px solid #b2a787}
+footer{opacity:0.4; font-size:0.8em; text-transform:uppercase; text-align:right}
 
-h2 {opacity:0.4; text-transform:uppercase; font-size:0.875em; letter-spacing:0.085em}
-h2 a {text-decoration:none}
-p {opacity:0.8; font-size:0.875em}
+h2 {opacity:0.4; font-size:3em; letter-spacing:-0.06em; line-height:1em;}
+h2 a {text-decoration:none; position:absolute; margin:-0.5em 0 0 -0.75em; font-size:0.4em}
+p {opacity:0.8; font-size:1em}
 
-pre {width:100%; overflow:auto}
-kbd, code {font-size:1em; font-family:, 'Andale Mono', 'Droid Sans Mono', 'Courier New', monospace;}
+pre {width:90%; overflow:auto; margin:0 auto; padding:1.2em 5%; background:#3a3933;
+    color:#eeead2; border-top:5px solid #b2a787}
+pre:hover {position:relative; width:100%;}
+kbd, code {font-size:1.1em; font-family:, 'Andale Mono', 'Droid Sans Mono', 'Courier New', monospace; letter-spacing:0.1em}
+abbr {border-bottom:1px dashed #807e71; cursor:help}
 </style>
 </head>
 
@@ -31,8 +42,8 @@ kbd, code {font-size:1em; font-family:, 'Andale Mono', 'Droid Sans Mono', 'Couri
 <header><nav>
     <a href="http://delicious.com/skl_">delicious</a>
     <a href="http://flickr.com/photos/stephenlang">flickr</a>
-    <a href="http://instagram.com/skl85/">instagram</a>
     <a href="http://github.com/skl">github</a>
+    <a href="http://instagram.com/skl85/">instagram</a>
     <a href="http://www.linkedin.com/in/stephenkarllang">linkedin</a>
     <a href="https://twitter.com/skl_">twitter</a>
 </nav></header>
