Wider <pre> blocks for readability

--- a/index.html
+++ b/index.html
@@ -30,9 +30,8 @@ h2 {opacity:0.4; font-size:3em; letter-spacing:-0.06em; line-height:1em;}
 h2 a {text-decoration:none; position:absolute; margin:-0.5em 0 0 -0.75em; font-size:0.4em}
 p {opacity:0.8; font-size:1em}
 
-pre {width:90%; overflow:auto; margin:0 auto; padding:1.2em 5%; background:#3a3933;
+pre {width:100%; overflow:auto; margin:0 0 0 -5%; padding:1.2em 5%; background:#3a3933;
     color:#eeead2; border-top:5px solid #b2a787}
-pre:hover {position:relative; width:100%;}
 kbd, code {font-size:1.1em; font-family:, 'Andale Mono', 'Droid Sans Mono', 'Courier New', monospace; letter-spacing:0.1em}
 abbr {border-bottom:1px dashed #807e71; cursor:help}
 </style>
