Permanlink and grammar fix

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@ abbr {border-bottom:1px dashed #807e71; cursor:help}
 </nav></header>
 
 <!-- 2013-05-18 -->
-<article id="5-minute-lamp-stack">
-<h2><a href="#5-minute-lamp-stack">§</a> The 5-minute LAMP Stack</a></h2>
+<article id="the-5-minute-lamp-stack">
+<h2><a href="#the-5-minute-lamp-stack">§</a> The 5-minute LAMP Stack</a></h2>
 
 <p>With the <a href="http://www.debian.org/News/2013/20130504">release</a> of
 Debian 7.0 "Wheezy", PHP 5.4 is available though <code>apt-get</code> from the word go.
@@ -176,7 +176,7 @@ throughput on your server by making the most of the available resources.</p>
 is a piece of software, firmware or hardware that creates and runs
 virtual machines</q>.</p>
 
-<p>I started off by reading about what operating systems were best suited to
+<p>I started off by reading about which operating systems were best suited to
 what I would've called the Xen host. I now know the correct terminology to
 be "Domain 0" or <code>dom0</code> &ndash; as hypervisor terminology dictates that each
 machine is a domain (including the host). It seems you can run Xen on a variety
